--- a/pom.xml
+++ b/pom.xml
@@ -62,19 +62,15 @@
 		</dependencies>
 	</dependencyManagement>
 	
+	<distributionManagement>
+		<repository>
+			<id>ssh-repository</id>
+			<url>scpexe://ssh.sourceforge.net/home/groups/f/fo/fortuity/htdocs/repo/</url>
+		</repository>
+	</distributionManagement>
 	
   
 	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-site-plugin</artifactId>
-				<configuration>
-					<locales>en</locales>
-				</configuration>
-			</plugin>
-			
-		</plugins>
-		
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -96,8 +92,8 @@
 	</build>
 
 	<modules>
-		<module>elanevent-core</module>
-		<module>elanevent-hibernate</module>
-		<module>elanevent-spring</module>
+		<module>fortuity-core</module>
+		<module>fortuity-hibernate</module>
+		<module>fortuity-spring</module>
 	</modules>
 </project>
