--- a/fortuity-core/pom.xml
+++ b/fortuity-core/pom.xml
@@ -8,7 +8,7 @@
 	<groupId>com.fortuityframework</groupId>
 	<artifactId>fortuity-core</artifactId>
 	<name>fortuity-core</name>
-	<version>1.0-SNAPSHOT</version>
+	<version>${fortuity.version}</version>
 	<url>www.fortuityframework.com</url>
 	<description>
 		Core functionality for the Fortuity Framework
