--- a/fortuity-spring/pom.xml
+++ b/fortuity-spring/pom.xml
@@ -8,7 +8,7 @@
 	<groupId>com.fortuityframework</groupId>
 	<artifactId>fortuity-spring</artifactId>
 	<name>fortuity-spring</name>
-	<version>1.0-SNAPSHOT</version>
+	<version>${fortuity.version}</version>
 	<url>http://maven.apache.org</url>
 	
 	<dependencies>
@@ -26,7 +26,7 @@
 		<dependency>
 			<groupId>com.fortuityframework</groupId>
 			<artifactId>fortuity-core</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>${fortuity.version}</version>
 		</dependency>
 	</dependencies>
 </project>
