--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-eclipse-plugin</artifactId>
+					<version>2.7</version>
 					<configuration>
 						<downloadSources>true</downloadSources>
 						<downloadJavadocs>true</downloadJavadocs>
@@ -98,10 +99,14 @@
 		</pluginManagement>
 	</build>
 
+	<properties>
+		<fortuity.version>1.0-SNAPSHOT</fortuity.version>
+	</properties>
+
 	<modules>
 		<module>fortuity-core</module>
 		<module>fortuity-hibernate</module>
 		<module>fortuity-spring</module>
-    		<module>fortuity-openjpa</module>
+		<module>fortuity-wicket</module>
 	</modules>
 </project>
