--- a/fortuity-hibernate/pom.xml
+++ b/fortuity-hibernate/pom.xml
@@ -67,5 +67,23 @@
 			<artifactId>fortuity-core</artifactId>
 			<version>${fortuity.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>1.8.0.10</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.5.8</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.8.0.GA</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
