--- a/fortuity-spring/pom.xml
+++ b/fortuity-spring/pom.xml
@@ -28,5 +28,19 @@
 			<artifactId>fortuity-core</artifactId>
 			<version>${fortuity.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.5.8</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
+	
+	<build>
+		<testResources>
+			<testResource>
+				<directory>${basedir}/src/test/resources</directory>
+			</testResource>
+		</testResources>
+	</build>
 </project>
