--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 	
 	<distributionManagement>
 		<repository>
-			<id>ssh-repository</id>
+			<id>fortuity-repo</id>
 			<url>scpexe://shell.sourceforge.net/home/groups/f/fo/fortuity/htdocs/repo/</url>
 		</repository>
 	</distributionManagement>
