--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.fortuityframework</groupId>
 	<artifactId>fortuity-parent</artifactId>
 	<version>1.1-SNAPSHOT</version>
-	<name>Maven</name>
+	<name>Fortuity</name>
 	<url>http://www.fortuityframework.com/</url>
 	<inceptionYear>2009</inceptionYear>
 	<packaging>pom</packaging>
