--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,7 @@
 
 	<properties>
 		<fortuity.version>1.1-SNAPSHOT</fortuity.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<modules>
