--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,19 @@
 						<downloadSources>true</downloadSources>
 						<downloadJavadocs>true</downloadJavadocs>
 					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-gpg-plugin</artifactId>
+					<executions>
+						<execution>
+							<id>sign-artifacts</id>
+							<phase>verify</phase>
+							<goals>
+								<goal>sign</goal>
+							</goals>
+						</execution>
+					</executions>
 				</plugin>	
 			</plugins>
 		</pluginManagement>
